--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
   <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
 </head>
-<body>
+<body style="margin: 0">
   <app-root></app-root>
 </body>
 <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
